# ...
add_subdirectory( Common )
add_subdirectory( Attribute )
add_subdirectory( DataDictionary )
add_subdirectory( DataStructureAndEncodingDefinition )
add_subdirectory( InformationObjectDefinition )
add_subdirectory( MediaStorageAndFileFormat )
if(GDCM_BUILD_NETWORK)
  add_subdirectory( MessageExchangeDefinition )
endif()
