FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(
  "${GDCM_BINARY_DIR}/Source/Common"
  "${GDCM_SOURCE_DIR}/Source/Common"
)

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(
  ${PYTHON_INCLUDE_PATH}
  )
SET_SOURCE_FILES_PROPERTIES(gdcm.i PROPERTIES CPLUSPLUS ON)

SET(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_BINARY_DIR}")

SWIG_ADD_MODULE(gdcm python gdcm.i)
SWIG_LINK_LIBRARIES(gdcm gdcmDSED ${PYTHON_LIBRARIES})

